err/rlglue.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rlglue'...
Compiling './lib/python3.5/site-packages/rlglue/RLGlue.py'...
***   File "./lib/python3.5/site-packages/rlglue/RLGlue.py", line 58
    print "RL-Glue Python Experiment Codec Version: "+theCodecVersion+" (Build "+theSVNVersion+")"
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rlglue/agent'...
Compiling './lib/python3.5/site-packages/rlglue/agent/AgentLoader.py'...
***   File "./lib/python3.5/site-packages/rlglue/agent/AgentLoader.py", line 52
    print "RL-Glue Python Agent Codec Version: "+theCodecVersion+" (Build "+theSVNVersion+")"
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rlglue/agent/AgentLoaderScript.py'...
***   File "./lib/python3.5/site-packages/rlglue/agent/AgentLoaderScript.py", line 38
    print usage
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rlglue/environment'...
Compiling './lib/python3.5/site-packages/rlglue/environment/Environment.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (Environment.py, line 34)
Compiling './lib/python3.5/site-packages/rlglue/environment/EnvironmentLoader.py'...
***   File "./lib/python3.5/site-packages/rlglue/environment/EnvironmentLoader.py", line 52
    print "RL-Glue Python Environment Codec Version: "+theCodecVersion+" (Build "+theSVNVersion+")"
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rlglue/environment/EnvironmentLoaderScript.py'...
***   File "./lib/python3.5/site-packages/rlglue/environment/EnvironmentLoaderScript.py", line 37
    print usage
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rlglue/network'...
Compiling './lib/python3.5/site-packages/rlglue/network/Network.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (Network.py, line 96)
Listing './lib/python3.5/site-packages/rlglue/utils'...
Compiling './lib/python3.5/site-packages/rlglue/utils/TaskSpecVRLGLUE3.py'...
***   File "./lib/python3.5/site-packages/rlglue/utils/TaskSpecVRLGLUE3.py", line 65
    print "Warning: TaskSpec Version is not "+self.expected_version+" but "+self.getVersion()
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rlglue-2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
